# fbf

./: LICENSE  pyproject.toml
.github/workflows/: release.yml
rust/: Cargo.toml
rust/src/: lib.rs
src/fbf/: __init__.py  __main__.py  cell.py  run.py
tests/bf_code/: putchar.bf
