[project]
name = "fbf"
version = "0.1.0"
description = "brainfuck interpreter,debugger..."
authors = [{ name = "yixinBC", email = "yixinbc@foxmail.com" }]
dependencies = ["rich>=13.6.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
fbf = "fbf.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "maturin>=1.3.2",
    "pip>=23.3.1",
]
